[package]
name = "taibai_api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = { version = "0.13", features = ["derive"] }
prost-types = "0.13"
# chrono = { version = "0.4", features = ["serde"] }  # Will add when implementing ObjectMeta
